--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
   "scripts": {
     "build": "npx ts-node index.ts",
     "build:tailwind": "npx tailwindcss -i $INPUT -o $OUTPUT -m",
+    "lint": "eslint .",
+    "prettier": "prettier --check --ignore-unknown .",
+    "prettier:fix": "prettier --write --ignore-unknown .",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Pavel Sapachev",
@@ -17,5 +20,20 @@
     "tailwindcss": "^3.2.4",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.4"
+  },
+  "devDependencies": {
+    "@commitlint/cli": "^17.4.2",
+    "@commitlint/config-conventional": "^17.4.2",
+    "@typescript-eslint/eslint-plugin": "^5.49.0",
+    "@typescript-eslint/parser": "^5.49.0",
+    "eslint": "^8.32.0",
+    "husky": "^8.0.0",
+    "lint-staged": "^13.1.0",
+    "prettier": "^2.8.3",
+    "prettier-plugin-tailwindcss": "^0.2.1",
+    "pretty-quick": "^3.1.3"
+  },
+  "lint-staged": {
+    "**/*": "prettier --write --ignore-unknown ."
   }
 }
