--- a/package.json
+++ b/package.json
@@ -16,11 +16,11 @@
   "license": "ISC",
   "dependencies": {
     "@types/mustache": "^4.2.2",
+    "inversify": "^6.0.1",
     "mustache": "^4.2.0",
     "reflect-metadata": "^0.1.13",
     "tailwindcss": "^3.2.4",
     "ts-node": "^10.9.1",
-    "tsyringe": "^4.7.0",
     "typescript": "^4.9.4"
   },
   "devDependencies": {
