--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "lint": "eslint .",
     "prettier": "prettier --check --ignore-unknown .",
     "prettier:fix": "prettier --write --ignore-unknown .",
-    "test": "npx ts-node ./node_modules/jasmine/bin/jasmine --config=./jasmine.json"
+    "test": "npx ts-node ./node_modules/jasmine/bin/jasmine --config=./jasmine.json",
+    "check": "npm run build --read-only && npm run lint && npm run test"
   },
   "author": "Pavel Sapachev",
   "repository": "https://github.com/sapachev/error-pages",
