--- a/package.json
+++ b/package.json
@@ -1,22 +1,27 @@
 {
   "name": "error-pages",
-  "version": "1.0.3",
+  "version": "1.1.0",
   "description": "Lightweight tool to create static HTTP Error Pages in minimalistic adaptive and accessible design with customization and localization support",
   "main": "index.ts",
   "scripts": {
     "build": "npx ts-node index.ts",
+    "build:ci": "npx ts-node index.ts --read-only",
     "build:tailwind": "npx tailwindcss -i $INPUT -o $OUTPUT -m",
     "lint": "eslint .",
     "prettier": "prettier --check --ignore-unknown .",
     "prettier:fix": "prettier --write --ignore-unknown .",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "nyc --reporter=html mocha -r ts-node/register 'test/**/*.ts'",
+    "test:ci": "nyc --reporter=text mocha -r ts-node/register 'test/**/*.ts'",
+    "check": "npm run build:ci && npm run lint && npm run test:ci"
   },
   "author": "Pavel Sapachev",
   "repository": "https://github.com/sapachev/error-pages",
   "license": "ISC",
   "dependencies": {
     "@types/mustache": "^4.2.2",
+    "inversify": "^6.0.1",
     "mustache": "^4.2.0",
+    "reflect-metadata": "^0.1.13",
     "tailwindcss": "^3.2.4",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.4"
@@ -24,14 +29,21 @@
   "devDependencies": {
     "@commitlint/cli": "^17.4.2",
     "@commitlint/config-conventional": "^17.4.2",
+    "@types/chai": "^4.3.4",
+    "@types/mocha": "^10.0.1",
+    "@types/sinon": "^10.0.13",
     "@typescript-eslint/eslint-plugin": "^5.49.0",
     "@typescript-eslint/parser": "^5.49.0",
+    "chai": "^4.3.7",
     "eslint": "^8.32.0",
     "husky": "^8.0.0",
     "lint-staged": "^13.1.0",
+    "mocha": "^10.2.0",
+    "nyc": "^15.1.0",
     "prettier": "^2.8.3",
     "prettier-plugin-tailwindcss": "^0.2.1",
-    "pretty-quick": "^3.1.3"
+    "pretty-quick": "^3.1.3",
+    "sinon": "^15.0.1"
   },
   "lint-staged": {
     "**/*": "prettier --write --ignore-unknown ."
