--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "error-pages",
-  "version": "1.1.0",
+  "version": "1.2.0",
   "description": "Lightweight tool to create static HTTP Error Pages in minimalistic adaptive and accessible design with customization and localization support",
   "main": "index.ts",
   "scripts": {
@@ -12,6 +12,7 @@
     "prettier:fix": "prettier --write --ignore-unknown .",
     "test": "nyc --reporter=html mocha -r ts-node/register 'test/**/*.ts'",
     "test:ci": "nyc --reporter=text mocha -r ts-node/register 'test/**/*.ts'",
+    "test:watch": "nyc --reporter=html mocha -r ts-node/register 'test/**/*.ts' -w",
     "check": "npm run build:ci && npm run lint && npm run test:ci"
   },
   "author": "Pavel Sapachev",
