feat: add code coverage badge to README

--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     "lint": "eslint .",
     "prettier": "prettier --check --ignore-unknown .",
     "prettier:fix": "prettier --write --ignore-unknown .",
-    "test": "nyc --reporter=html mocha -r ts-node/register 'test/**/*.ts'",
-    "test:ci": "nyc --reporter=text mocha -r ts-node/register 'test/**/*.ts'",
-    "test:watch": "nyc --reporter=html mocha -r ts-node/register 'test/**/*.ts' -w",
-    "check": "npm run build:ci && npm run lint && npm run test:ci"
+    "test": "mocha -r ts-node/register 'test/**/*.ts'",
+    "check": "npm run build:ci && npm run lint && npm run coverage:json",
+    "coverage:html": "nyc --reporter=html npm run test",
+    "coverage:json": "nyc --reporter=json-summary npm run test",
+    "make-badges": "istanbul-badges-readme --coverageDir='./coverage'",
+    "make-badges:ci": "npm run make-badges -- --ci --exitCode=1"
   },
   "author": "Pavel Sapachev",
   "repository": "https://github.com/sapachev/error-pages",
@@ -38,6 +40,7 @@
     "chai": "^4.3.7",
     "eslint": "^8.32.0",
     "husky": "^8.0.0",
+    "istanbul-badges-readme": "^1.8.4",
     "lint-staged": "^13.1.0",
     "mocha": "^10.2.0",
     "nyc": "^15.1.0",
