--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -25,3 +25,5 @@ jobs:
         run: npm ci
       - name: Check
         run: npm run check
+      - name: Badge
+        run: npm run make-badges:ci
