--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "coverage:html": "nyc --reporter=html npm run test",
     "coverage:json": "nyc --reporter=json-summary npm run test",
     "make-badges": "istanbul-badges-readme --coverageDir='./coverage'",
-    "make-badges:ci": "npm run make-badges -- --ci --exitCode=1"
+    "make-badges:ci": "npm run make-badges -- --ci"
   },
   "author": "Pavel Sapachev",
   "repository": "https://github.com/sapachev/error-pages",
