feat: add coveralls

--- a/package.json
+++ b/package.json
@@ -11,9 +11,10 @@
     "prettier": "prettier --check --ignore-unknown .",
     "prettier:fix": "prettier --write --ignore-unknown .",
     "test": "mocha -r ts-node/register 'test/**/*.ts'",
-    "check": "npm run build:ci && npm run lint && npm run coverage:json",
+    "check": "npm run build:ci && npm run lint && npm run coverage:lcov",
     "coverage:html": "nyc --reporter=html npm run test",
     "coverage:json": "nyc --reporter=json-summary npm run test",
+    "coverage:lcov": "nyc report --reporter=text-lcov  npm run test | coveralls",
     "make-badges": "istanbul-badges-readme --coverageDir='./coverage'",
     "make-badges:ci": "npm run make-badges -- --ci"
   },
@@ -38,6 +39,7 @@
     "@typescript-eslint/eslint-plugin": "^5.49.0",
     "@typescript-eslint/parser": "^5.49.0",
     "chai": "^4.3.7",
+    "coveralls": "^3.1.1",
     "eslint": "^8.32.0",
     "husky": "^8.0.0",
     "istanbul-badges-readme": "^1.8.4",
