--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -25,5 +25,7 @@ jobs:
         run: npm ci
       - name: Check
         run: npm run check
-      - name: Badge
-        run: npm run make-badges:ci
+      - name: Coveralls GitHub Action
+        uses: coverallsapp/github-action@1.1.3
+        with:
+          github-token: ${{ secrets.GITHUB_TOKEN }}
