--- a/package.json
+++ b/package.json
@@ -14,9 +14,7 @@
     "check": "npm run build:ci && npm run lint && npm run coverage:lcov",
     "coverage:html": "nyc --reporter=html npm run test",
     "coverage:json": "nyc --reporter=json-summary npm run test",
-    "coverage:lcov": "nyc --reporter=lcov npm run test",
-    "make-badges": "istanbul-badges-readme --coverageDir='./coverage'",
-    "make-badges:ci": "npm run make-badges -- --ci"
+    "coverage:lcov": "nyc --reporter=lcov npm run test"
   },
   "author": "Pavel Sapachev",
   "repository": "https://github.com/sapachev/error-pages",
@@ -42,7 +40,6 @@
     "coveralls": "^3.1.1",
     "eslint": "^8.32.0",
     "husky": "^8.0.0",
-    "istanbul-badges-readme": "^1.8.4",
     "lint-staged": "^13.1.0",
     "mocha": "^10.2.0",
     "nyc": "^15.1.0",
