feat: add badges to README.md (#8)
* feat: add code coverage badge to README

* fix: ci

* feat: add coveralls

* fix: ci

* fix: ci

* fix: rename workflow

* fix: rename workflow

* fix: badges

* 1.2.1

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,4 @@
-name: Node.js CI
+name: Quality Check
 
 on:
   push:
@@ -16,12 +16,19 @@ jobs:
 
     steps:
       - uses: actions/checkout@v3
+
       - name: Prepare Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v3
         with:
           node-version: ${{ matrix.node-version }}
           cache: "npm"
+
       - name: Install Dependencies
         run: npm ci
       - name: Check
         run: npm run check
+
+      - name: Coveralls GitHub Action
+        uses: coverallsapp/github-action@1.1.3
+        with:
+          github-token: ${{ secrets.GITHUB_TOKEN }}
