--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,8 +1,10 @@
-name: Quality Check
+name: Build and Deploy
 
 on:
   push:
     branches: ["main"]
+
+  #TODO: REMOVE NEXT BLOCK
   pull_request:
     branches: ["main"]
 
@@ -26,10 +28,17 @@ jobs:
       - name: Install Dependencies
         run: npm ci
 
-      - name: Check
-        run: npm run check
+      - name: Build (en)
+        run: |
+          LOCALE=en npm run build
+          zip -rq ./artifacts/error-pages-en.latest.zip ./dist/
 
-      - name: Coveralls GitHub Action
-        uses: coverallsapp/github-action@1.1.3
+      - name: Upload artifacts
+        uses: actions/upload-pages-artifact@v1
         with:
-          github-token: ${{ secrets.GITHUB_TOKEN }}
+          # Upload only docs directory
+          path: "artifacts"
+
+      - name: Deploy to GitHub Pages
+        id: deployment
+        uses: actions/deploy-pages@v1
