fix: correct http status on each error response

--- a/snippets/nginx-error-pages.conf
+++ b/snippets/nginx-error-pages.conf
@@ -1,6 +1,12 @@
 {{#codes}}
-error_page {{.}} = @error{{.}};
+error_page {{.}} ={{.}} @error{{.}};
 {{/codes}}
+
+location ^~ /@assets {
+  root /usr/share/nginx/html/error-pages;
+  allow all;
+  auth_basic off;
+}
 
 {{#codes}}
 location @error{{.}} {
