--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "reflect-metadata": "^0.1.13",
     "tailwindcss": "^3.2.4",
     "ts-node": "^10.9.1",
-    "typescript": "^4.9.4"
+    "typescript": "^4.9.4",
+    "typograf": "^7.1.0"
   },
   "devDependencies": {
     "@commitlint/cli": "^17.4.2",
