--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "error-pages",
-  "version": "1.8.5",
+  "version": "1.9.0",
   "description": "Lightweight tool to create static HTTP Error Pages in minimalistic adaptive and accessible design with customization and localization support",
   "main": "index.ts",
   "scripts": {
@@ -25,7 +25,8 @@
     "reflect-metadata": "^0.1.13",
     "tailwindcss": "^3.2.4",
     "ts-node": "^10.9.1",
-    "typescript": "^4.9.4"
+    "typescript": "^4.9.4",
+    "typograf": "^7.1.0"
   },
   "devDependencies": {
     "@commitlint/cli": "^17.4.2",
