--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "test": "mocha -r ts-node/register 'test/**/*.ts'",
     "check": "npm run build && npm run lint && npm run coverage:lcov",
     "coverage:html": "nyc --reporter=html npm run test",
-    "coverage:lcov": "nyc --reporter=lcov npm run test"
+    "coverage:lcov": "nyc --reporter=lcov npm run test",
+    "dev": "npx ts-node dev/server.ts",
+    "live-dev": "npx ts-node live-dev.ts"
   },
   "author": "Pavel Sapachev",
   "repository": "https://github.com/sapachev/error-pages",
@@ -40,6 +42,7 @@
     "coveralls": "^3.1.1",
     "eslint": "^8.32.0",
     "husky": "^8.0.0",
+    "koa": "^2.14.2",
     "lint-staged": "^13.1.0",
     "mocha": "^10.2.0",
     "nyc": "^15.1.0",
