feat: add hot-reload over sse

--- a/package.json
+++ b/package.json
@@ -38,10 +38,12 @@
     "@typescript-eslint/eslint-plugin": "^5.49.0",
     "@typescript-eslint/parser": "^5.49.0",
     "chai": "^4.3.7",
+    "chokidar": "^3.5.3",
     "coveralls": "^3.1.1",
     "eslint": "^8.32.0",
     "husky": "^8.0.0",
     "koa": "^2.14.2",
+    "koa-sse-stream": "^0.2.0",
     "lint-staged": "^13.1.0",
     "mocha": "^10.2.0",
     "nyc": "^15.1.0",
