--- a/package.json
+++ b/package.json
@@ -51,6 +51,11 @@
     "pretty-quick": "^3.1.3",
     "sinon": "^15.0.1"
   },
+  "commitlint": {
+    "extends": [
+      "@commitlint/config-conventional"
+    ]
+  },
   "lint-staged": {
     "**/*": "prettier --write --ignore-unknown ."
   }
