--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "error-pages",
-  "version": "1.11.0",
+  "version": "1.11.1",
   "description": "Lightweight tool to create static HTTP Error Pages in minimalistic adaptive and accessible design with customization and localization support",
   "main": "index.ts",
   "scripts": {
@@ -41,7 +41,6 @@
     "chokidar": "^3.5.3",
     "coveralls": "^3.1.1",
     "eslint": "^8.32.0",
-    "husky": "^8.0.0",
     "koa": "^2.14.2",
     "koa-sse-stream": "^0.2.0",
     "lint-staged": "^13.1.0",
@@ -51,6 +50,11 @@
     "prettier-plugin-tailwindcss": "^0.2.1",
     "pretty-quick": "^3.1.3",
     "sinon": "^15.0.1"
+  },
+  "commitlint": {
+    "extends": [
+      "@commitlint/config-conventional"
+    ]
   },
   "lint-staged": {
     "**/*": "prettier --write --ignore-unknown ."
